Reordered thingies to fix spacing on mobile

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -50,6 +50,7 @@
 
 .links-wide, .links-compact {
     display: inline-block;
+    padding: 0 10px;
 }
 
 .links-wide img, .links-compact img {
